manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "flaskkub-d14c"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "flaskkub-d14c"
  template:
    metadata:
      labels:
        app: "flaskkub-d14c"
    spec:
      containers:
        - name: "flaskkub-d14c"
          image: "flasktest234.azurecr.io/flaskkub"
          ports:
          - containerPort: 5000
