manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "flaskkub-d14c"
    labels:
        app: "flaskkub-d14c"
spec:
    type: ClusterIP
    ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
    selector:
        app: "flaskkub-d14c"
